--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -63,9 +63,10 @@
 			</div>
 			
 			<div class="sectionContent">
+
 				<article>
 					<h2>Sr. Software Engineer at Sopra Steria</h2>
-					<p class="subDetails">September 2020 - Present</p>
+					<p class="subDetails">September 2020 - March 2020</p>
 					<p>Architecting solutions and leading a team of 10 around data platform , worked on designing and implementing automation frameworks for delivering the data platforms to client </p>
 				</article>
 				
