--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,12 +27,14 @@
 <!--			<img src="headshot.jpg" alt="Alan Smith" />-->
 		</div>
 		
-		<div id="name">
+		<div id="name" >
 			<h1 class="quickFade delayTwo">Prateek Saraf</h1>
-			<h2 class="quickFade delayThree">Sr Software Engineer</h2>
+			<h3 class="quickFade delayThree">Technical Program Manager at GoJek</h3>
+      <h3 class="quickFade delayThree">Ex SAP</h3>
+      <div class="clear"></div>
 		</div>
-		
-		<div id="contactDetails" class="quickFade delayFour">
+
+		<div id="contactDetails"  class="quickFade delayFour">
 			<ul>
 				<li> <a href="mailto:prateeksaraf2010@gmail.com" target="_blank">prateeksaraf2010@gmail .com</a></li>
 				<li> <a href="https://github.com/prateeksaraf2010">https://github.com/prateeksaraf2010</a></li>
@@ -50,7 +52,11 @@
 				</div>
 				
 				<div class="sectionContent">
-					<p> Around 7 years of experience in engineering and solution consulting to various clients across the globe. My expertise has been around enterprise software engineering along with full stack development using Ruby on Rails</p>
+          <p>Technical Program manager experienced with Agile methodologies on multiple roles including Program management ,Development , Support , Implementation and Delivery of solutions and technical training’s.
+
+          <h2>What about me at work?</h2>
+          I'm extrovert, talkative and sociable with an immense interest in expanding my knowledge. Energy, curiosity and commitment are my best advisers everyday on the job and Work gives me a feeling of accomplishment.
+          </p>
 				</div>
 			</article>
 			<div class="clear"></div>
@@ -63,18 +69,31 @@
 			</div>
 			
 			<div class="sectionContent">
+        <article>
+          <h2>Technical Program Manager at GoJek</h2>
+          <p class="subDetails">March 2021 - Present</p>
+          <p>&#8226 Executing the adoptions of monitoring solutions across several teams in GoJek built with Prometheus and Grafana for a goal of setting SLOs across the organization.<br/>
+            &#8226 Managing and executing programs across GoJek like Setting up Critical / Warning alerts , Defining SLO journey , Developing standards ) to adopt the standardize solutions , and follow Development standards so that there is no silos in development teams across GoJek wrt Engineering platform.<br/>
+            &#8226 Working towards the API Browser with API documentation for the services offering from multiple teams so there is no information gap in developers.</p>
+        </article>
 
-				<article>
-					<h2>Sr. Software Engineer at Sopra Steria</h2>
-					<p class="subDetails">September 2020 - March 2020</p>
-					<p>Architecting solutions and leading a team of 10 around data platform , worked on designing and implementing automation frameworks for delivering the data platforms to client </p>
+					<h2>Technical Program Special at Sopra Steria</h2>
+					<p class="subDetails">September 2020 - March 2021</p>
+          <p> &#8226 Involved in cross team collaboration and communicate with clients to define the milestones and mapping the technical feasibility aligning with the engineering team.
+          <br/>&#8226 Worked as a Technical program specialist to deliver a robust financial services data platform for a leading bank in Germany.</p>
 				</article>
 				
 				<article>
-					<h2>Developer and Consultant at SAP</h2>
+					<h2>Business Consultant at SAP</h2>
 					<p class="subDetails">March 2015 - September 2020</p>
-					<p>Lead a team of 3 for industry integration of Supply chain into Product platform , Refactored a legacy API using Object oriented paradigm to improve peformance and maintenance along with restructuring database to reduce data footprint</p>
-				</article>
+          <p>&#8226 Implemented low latency data platform using in-memory and columnar database for a leading bank in Singapore catering to their analytical business needs
+            <br/>&#8226 Lead the technical implementation in Dubai for a leading bank to understand and map the requirements for reporting business and managed the milestones delivery
+            <br/>&#8226 Engaged with Product engineering teams to evolve the product from 1.1 to 1.10 based on client feedbacks and business need
+            <br/>&#8226 Engaged in executing the initiatives to implement new automated services in order to reduce implementation cost and effort upto 2x.
+            <br/>&#8226 Delivered training’s and managed technical end to end implementations.
+            <br/>&#8226 Designed & Developed the interfaces for industry integration for the supply chain requirements- involved in architecting and delivering the solution
+            <br/>&#8226 Developed inbound and outbound integration of master data with cross product areas</p>
+        </article>
 				
 				<article>
 					<h2>Associate Developer at CA Technologies</h2>
@@ -93,12 +112,12 @@
 			
 			<div class="sectionContent">
 				<ul class="keySkills">
-					<li>Ruby on Rails</li>
-					<li>Database</li>
-          <li>Full stack</li>
+					<li>Program Management</li>
+					<li>Program Execution</li>
+          <li>Full stack Development</li>
 					<li>SAP HANA database</li>
 					<li>C++ and Java</li>
-					<li>Cloud Platform</li>
+					<li>Google Cloud Platform</li>
           <li>Agile Methodologies</li>
           <li>Object Oriented Programming</li>
           <li>Git</li>
