--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -77,7 +77,7 @@
             &#8226 Working towards the API Browser with API documentation for the services offering from multiple teams so there is no information gap in developers.</p>
         </article>
 
-					<h2>Technical Program Special at Sopra Steria</h2>
+					<h2>Technical Program Specialist at Sopra Steria</h2>
 					<p class="subDetails">September 2020 - March 2021</p>
           <p> &#8226 Involved in cross team collaboration and communicate with clients to define the milestones and mapping the technical feasibility aligning with the engineering team.
           <br/>&#8226 Worked as a Technical program specialist to deliver a robust financial services data platform for a leading bank in Germany.</p>
