--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -72,15 +72,22 @@
         <article>
           <h2>Technical Program Manager at GoJek</h2>
           <p class="subDetails">March 2021 - Present</p>
-          <p>&#8226 Executing the adoptions of monitoring solutions across several teams in GoJek built with Prometheus and Grafana for a goal of setting SLOs across the organization.<br/>
-            &#8226 Managing and executing programs across GoJek like Setting up Critical / Warning alerts , Defining SLO journey , Developing standards ) to adopt the standardize solutions , and follow Development standards so that there is no silos in development teams across GoJek wrt Engineering platform.<br/>
-            &#8226 Working towards the API Browser with API documentation for the services offering from multiple teams so there is no information gap in developers.</p>
+          <p>&#8226 Standardizing monitoring solutions across teams running monitoring solutions in silos across GoJek <br/>
+            &#8226 Optimizing GCP cost calculating CUD / SUD options <br/>
+            &#8226 Attributing cloud costs by cost attribution to respective teams and cleaning-up unused instances <br/>
+            &#8226 Migrating teams to latest platform/OS offering <br/>
+            &#8226 Ideating and managing standard developer documentation and API explorer <br/>
+            &#8226 Managing GKE cluster upgrade program <br/>
+            &#8226 Mentoring other TPMs and ideating some of the areas to improve Technical process <p/>
         </article>
 
 					<h2>Technical Program Specialist at Sopra Steria</h2>
 					<p class="subDetails">September 2020 - March 2021</p>
-          <p> &#8226 Involved in cross team collaboration and communicate with clients to define the milestones and mapping the technical feasibility aligning with the engineering team.
-          <br/>&#8226 Worked as a Technical program specialist to deliver a robust financial services data platform for a leading bank in Germany.</p>
+          <p> &#8226 Managed projects on Banking data platform solution ( FSDP ) <br/>
+            •Collaborated with other teams like business, reporting and infrastructure<br/>
+            •Reported status updates to stakeholders<br/>
+            •Developed tools and solutions for developers and testers<br/>
+            •Identified the scope and challenges <p/>
 				</article>
 				
 				<article>
